remove unused sessions in presence endpoints
